--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,4 @@
+<footer class="site-footer"> : ) </footer>
+
 <script src="{{ 'node-assets/stateless-maybe-js/dist/maybe.min.js' | relative_url }}"></script>
 <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
