Graphic update & link fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,16 @@
-<footer class="site-footer"> : ) </footer>
+<footer class="site-footer pure-g">
+  <div class="pure-u-1-2">
+    <p>Hello there, children!</p>
+  </div>
+
+  <div class="pure-u-1-5">
+    <p>Contact</p>
+  </div>
+
+  <div class="pure-u-1-5">
+    <p>Blah</p>
+  </div>
+</footer>
 
 <script src="{{ 'node-assets/stateless-maybe-js/dist/maybe.min.js' | relative_url }}"></script>
 <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
