--- a/assets/css/_sass/_footer.scss
+++ b/assets/css/_sass/_footer.scss
@@ -1,5 +1,6 @@
 .site-footer {
   text-align: center;
   padding: 10px 0;
-  background-color: $very-light-gray;
+  background-color: $dark-gray;
+  color: $very-light-gray;
 }
