--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,9 +11,15 @@
   <meta name="viewport" content="width=device-width">
   <meta charset="UTF-8">
 
+  <!--
   <link rel="stylesheet" href="{{ 'node-assets/purecss/build/base-min.css' | relative_url }}">
   <link rel="stylesheet" href="{{ 'node-assets/purecss/build/menus-min.css' | relative_url }}">
   <link rel="stylesheet" href="{{ 'node-assets/purecss/build/grids-min.css' | relative_url }}">
+
+  -->
+
+  <!-- TODO -->
+  <link rel="stylesheet" href="{{ 'node-assets/purecss/build/pure-min.css' | relative_url }}">
   <link rel="stylesheet" href="{{ 'node-assets/purecss/build/grids-responsive-min.css' | relative_url }}">
 
   <link rel="stylesheet" href="{{ 'assets/css/main.css' | relative_url }}">
