--- a/assets/css/_sass/_footer.scss
+++ b/assets/css/_sass/_footer.scss
@@ -1,6 +1,5 @@
 .site-footer {
-  text-align: center;
-  padding: 10px 0;
   background-color: $dark-gray;
   color: $very-light-gray;
+  font-size: 0.8em;
 }
