--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,4 +28,5 @@ $assets-path: "{{ 'assets' | relative_url }}";
   "_sass/_contact-us.scss",
   "_sass/_the-school.scss",
   "_sass/_who-we-are.scss",
+  "_sass/_about.scss",
   "_sass/_donate.scss";
