--- a/assets/css/_sass/_menu.scss
+++ b/assets/css/_sass/_menu.scss
@@ -46,7 +46,6 @@
 }
 
 .pure-menu-list > .pure-menu-item,
-.heading-social,
 .menu-heading {
   text-align: center;
   display: block;
@@ -155,8 +154,7 @@
     width: auto;
   }
 
-  .pure-menu-list,
-  .heading-social {
+  .pure-menu-list {
     position: relative;
     top: $lg-header-height - 39px;
     margin-top: 0;
@@ -199,8 +197,7 @@
 }
 
 @media screen and (min-width: $xl-width) {
-  .pure-menu-list,
-  .heading-social {
+  .pure-menu-list {
     left: 0;
   }
 
