Olga forced me to remove parallax on who-we-are

--- a/assets/css/_sass/_contact-us.scss
+++ b/assets/css/_sass/_contact-us.scss
@@ -32,3 +32,10 @@
     }
   }
 }
+
+.contact-us-parallax {
+  background-image: asset-url("img/contact-us.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 450px;
+}
