--- a/assets/css/_sass/_contact-us.scss
+++ b/assets/css/_sass/_contact-us.scss
@@ -36,6 +36,7 @@
 .contact-us-parallax {
   background-image: asset-url("img/contact-us.jpg");
   background-repeat: no-repeat;
+  //background-position: 0 95px;
   background-size: 100%;
-  height: 450px;
+  height: 600px;
 }
