Content/graphic fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,9 @@
     {% endfor %}
   </p>
 
-
   <p class="no-margin light-bottom-margin">Studio Arco APS: Arco degli Acetari, 40, Roma</p>
+
+  <p class="no-margin light-bottom-margin">Email: {{ site.email }}/ohendel@hearweart.org</p> <!--TODO link/site properties -->
 
   <p class="no-margin">
     <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
