Minor graphic fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,13 +10,14 @@
 
   <p class="no-margin light-bottom-margin">Studio Arco APS: Arco degli Acetari, 40, Roma</p>
 
-  <p class="no-margin light-bottom-margin">Email: {{ site.email }}/ohendel@hearweart.org</p> <!--TODO link/site properties -->
+  <p class="no-margin light-bottom-margin">Email: <a href="mailto:{{ site.email }}">{{ site.email }}</a>/<a href="mailto:ohendel@hearweart.org">ohendel@hearweart.org</a></p>
 
   <p class="no-margin">
-    <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
-    <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/80x15.png">
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/80x15.png">
     </a>
-    This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+
+    <span class="creative-commons">This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+    </span>
   </p>
 </footer>
 
