--- a/assets/css/_sass/_footer.scss
+++ b/assets/css/_sass/_footer.scss
@@ -4,6 +4,15 @@
   font-size: 0.8em;
   margin-top: 50px;
 
+  .social-links {
+    font-size: 1.3em;
+  }
+
+  .fa-envelope {
+    position: relative;
+    top: 1px;
+  }
+
   .creative-commons {
     position: relative;
     bottom: 3px;
