Home style update

--- a/assets/css/_sass/_general.scss
+++ b/assets/css/_sass/_general.scss
@@ -278,6 +278,10 @@ blockquote:after {
   background-color: $very-light-gray;
 }
 
+.light-gray-bg {
+  background-color: $light-gray;
+}
+
 .very-light-orange-bg {
   background-color: $very-light-orange;
 }
