Minor content update & fixes

--- a/assets/css/_sass/_general.scss
+++ b/assets/css/_sass/_general.scss
@@ -196,6 +196,11 @@ blockquote:after {
   }
 }
 
+.quote-section {
+  background: $medium-orange;
+  color: white;
+}
+
 .fa-facebook-f {
   color: $dark-blue;
 }
