Image optimization, minor content update

--- a/assets/css/_sass/_donate.scss
+++ b/assets/css/_sass/_donate.scss
@@ -1,5 +1,5 @@
 .donate-parallax {
-  background-image: asset-url("img/donate.jpg");
+  background-image: asset-url("img/donate-1.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
   height: 550px;
