--- a/assets/css/_sass/_donate.scss
+++ b/assets/css/_sass/_donate.scss
@@ -2,7 +2,11 @@
   background-image: asset-url("img/donate-1.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
-  height: 550px;
+  height: 290px;
+
+  @media screen and (min-width: $md-width) {
+    height: 550px;
+  }
 }
 
 .donate-chart-container {
