Removed old mail from footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
 
   <p class="no-margin light-bottom-margin">Studio Arco APS: Arco degli Acetari, 40, Roma</p>
 
-  <p class="no-margin light-bottom-margin">Email: <a href="mailto:{{ site.email }}">{{ site.email }}</a>/<a href="mailto:ohendel@hearweart.org">ohendel@hearweart.org</a></p>
+  <p class="no-margin light-bottom-margin">Email: <a href="mailto:{{ site.email }}">{{ site.email }}</a></p>
 
   <p class="no-margin">
     <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">
