--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,4 +25,5 @@
 
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
+  <meta name="google-site-verification" content="oJAHTNO62Hvo49KHsamTajGWPhGi9DE3kjqBh8cDx1E">
 </head>
