--- a/_includes/menu-items.html
+++ b/_includes/menu-items.html
@@ -7,32 +7,30 @@
 
   {% for item in menu_items %}
 
-    {% assign item_has_child = '' %}
-
     {% if item.childs  %}
-      {% assign item_has_child = 'pure-menu-allow-hover pure-menu-has-children' %}
+      {% assign children_class = 'pure-menu-allow-hover pure-menu-has-children' %}
+    {% else %}
+      {% assign children_class = '' %}
     {% endif %}
-
-    {% assign item_selected = '' %}
 
     {% if page.name contains item.route %}
-      {% assign item_selected = 'pure-menu-selected' %}
+      {% assign selected_class = 'pure-menu-selected' %}
+    {% else %}
+      {% assign selected_class = '' %}
     {% endif %}
 
-    <li class="pure-menu-item {{ item_has_child }} {{ item_selected }}">
 
-      {% if item.route %}
-        <a
+    <li class="pure-menu-item {{ children_class }} {{ selected_class }}">
+      <a
+        class="pure-menu-link uppercase"
+        {% if item.route %}
           href="{{ item.route | relative_url }}"
-          class="pure-menu-link uppercase">
-            {{ item.name }}
-        </a>
-      {% else %}
-        <span
-          class="pure-menu-link uppercase">
-            {{ item.name }}
-        </span>
-      {% endif %}
+        {% elsif item.childs %}
+          href="#"
+        {% endif %}
+      >
+        {{ item.name }}
+      </a>
 
       {% if item.childs %}
         {% assign menu_items = item.childs %}
