--- a/assets/css/_sass/_general.scss
+++ b/assets/css/_sass/_general.scss
@@ -226,6 +226,10 @@ blockquote:after {
   text-transform: uppercase;
 }
 
+.lowercase {
+  text-transform: lowercase;
+}
+
 // Font weight classes
 .font-weight-light {
   font-weight: 300;
